Fix external texture for metal Also add external texture plugin to Playground app so that it is at least built

--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -117,6 +117,7 @@ target_link_to_dependencies(Playground
     PRIVATE Canvas
     PRIVATE ChromeDevTools
     PRIVATE Console
+    PRIVATE ExternalTexture
     PRIVATE GraphicsDevice
     PRIVATE NativeCapture
     PRIVATE NativeEngine
