--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ FetchContent_Declare(cmake-extensions
 FetchContent_Declare(ios-cmake
     GIT_REPOSITORY https://github.com/leetal/ios-cmake.git
     GIT_TAG 04d91f6675dabb3c97df346a32f6184b0a7ef845)
-FetchContent_Declare(jsruntimehost
+FetchContent_Declare(JsRuntimeHost
     GIT_REPOSITORY https://github.com/BabylonJS/JsRuntimeHost.git
     GIT_TAG 1ff3a500b98264c15a08f6aca9baee0e662d3eaf)
 FetchContent_Declare(AndroidExtensions
@@ -19,7 +19,7 @@ FetchContent_Declare(AndroidExtensions
     GIT_TAG 883c4a286116e51ee989e39ee8e216d632997329)
 set(JSRUNTIMEHOST_TESTS OFF)
 
-set(CONTENT_TO_FETCH cmake-extensions jsruntimehost)
+set(CONTENT_TO_FETCH cmake-extensions JsRuntimeHost)
 
 if(IOS)
     FetchContent_MakeAvailable(ios-cmake)
