--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -41,6 +41,7 @@ jobs:
       - script: |
           mkdir build${{ variables.solutionName }}
           cd build${{ variables.solutionName }}
+          # BGFX_CONFIG_MAX_FRAME_BUFFERS is set so enough Framebuffers are available before V8 starts disposing unused ones
           cmake -A ${{ parameters.platform }} ${{ variables.jsEngineDefine }} -D BGFX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{ parameters.graphics_api }} -D CMAKE_UNITY_BUILD=${UNITY_BUILD} -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 ..
         displayName: 'Generate ${{ variables.solutionName }} solution'
     
