--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -127,3 +127,15 @@ jobs:
       name: Android_MacOS_V8
       vmImage: 'macOS-latest'
       JSEngine: V8
+
+  - template: .github/jobs/android_tests.yml
+    parameters:
+      name: Android_Tests_MacOS_JSC
+      vmImage: 'macOS-latest'
+      JSEngine: JavaScriptCore
+
+  - template: .github/jobs/android_tests.yml
+    parameters:
+      name: Android_Tests_MacOS_V8
+      vmImage: 'macOS-latest'
+      JSEngine: V8
