--- a/Apps/UnitTests/Android/app/src/main/cpp/CMakeLists.txt
+++ b/Apps/UnitTests/Android/app/src/main/cpp/CMakeLists.txt
@@ -11,7 +11,7 @@ get_filename_component(REPO_ROOT_DIR "${UNIT_TESTS_DIR}/../.." ABSOLUTE)
 set(JSRUNTIMEHOST_TESTS OFF) # Turn off the tests folder for Android Studio path
 add_subdirectory(${REPO_ROOT_DIR} "${CMAKE_CURRENT_BINARY_DIR}/BabylonNative")
 
-npm(install "${UNIT_TESTS_DIR}/../" "UnitTests")
+npm(install "${UNIT_TESTS_DIR}/../" "UnitTests" "--silent")
 
 add_library(UnitTestsJNI SHARED
     JNI.cpp
