--- a/Apps/UnitTests/Android/app/build.gradle
+++ b/Apps/UnitTests/Android/app/build.gradle
@@ -91,10 +91,17 @@ task copyScripts {
         }
         copy
         {
-            from '../../Scripts'
-            include "*.js"
+            from "../../../node_modules/babylonjs"
+            include "babylon.max.js"
             into 'src/main/assets/Scripts'
         }
+        copy
+        {
+            from "../../../node_modules/babylonjs-materials"
+            include "babylonjs.materials.js"
+            into 'src/main/assets/Scripts'
+        }
+
     }
 }
 
