Fix external texture for metal (#1273)
Also add external texture plugin to Playground app so that it is at
least built

--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -116,6 +116,7 @@ target_link_libraries(Playground
     PRIVATE AppRuntime
     PRIVATE Canvas
     PRIVATE Console
+    PRIVATE ExternalTexture
     PRIVATE GraphicsDevice
     PRIVATE NativeCapture
     PRIVATE NativeEngine
