Basic structure for ImageCapture, plus parts of the implementation

--- a/Plugins/NativeCamera/CMakeLists.txt
+++ b/Plugins/NativeCamera/CMakeLists.txt
@@ -10,6 +10,8 @@ set(SOURCES
     "Source/Capability.cpp"
     "Source/Constraint.h"
     "Source/Constraint.cpp"
+    "Source/ImageCapture.h"
+    "Source/ImageCapture.cpp"
     "Source/MediaDevices.h"
     "Source/MediaDevices.cpp"
     "Source/MediaStream.h"
