Started working on glslang size reduction

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -70,6 +70,7 @@ set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
 set(ENABLE_HLSL OFF CACHE BOOL "")
 set(ENABLE_OPT OFF CACHE BOOL "")
 set(ENABLE_CTEST OFF CACHE BOOL "")
+set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 add_subdirectory(glslang)
 set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
@@ -78,12 +79,14 @@ set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
 set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
+set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
 disable_warnings(GenericCodeGen)
 disable_warnings(glslang)
 disable_warnings(OGLCompiler)
 disable_warnings(OSDependent)
 disable_warnings(MachineIndependent)
 disable_warnings(SPIRV)
+disable_warnings(glslang-default-resource-limits)
 
 # -------------------------------- SPIRV-Cross --------------------------------
 # Dependencies: none
