--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -247,21 +247,24 @@
             "renderCount": 10,
             "playgroundId": "#W7E7CF#12",
             "referenceImage": "scissor-test.png",
-            "excludedGraphicsApis": ["D3D12"]
+            "excludedGraphicsApis": ["D3D12"],
+            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with 0.9 hardware scaling",
             "renderCount": 10,
             "playgroundId": "#W7E7CF#27",
             "referenceImage": "scissorTestWith0.9HardwareScaling.png",
-            "excludedGraphicsApis": ["D3D12"]
+            "excludedGraphicsApis": ["D3D12"],
+            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with 1.5 hardware scaling",
             "renderCount": 10,
             "playgroundId": "#W7E7CF#28",
             "referenceImage": "scissorTestWith1.5HardwareScaling.png",
-            "excludedGraphicsApis": ["D3D12"]
+            "excludedGraphicsApis": ["D3D12"],
+            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with negative x and y",
