--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -245,23 +245,26 @@
         {
             "title": "Scissor test",
             "renderCount": 10,
-            "playgroundId": "#W7E7CF#29",
+            "playgroundId": "#W7E7CF#12",
             "referenceImage": "scissor-test.png",
-            "comments": "Reset playgroundId to #W7E7CF#12 when d3d12 mip-map issue is fixed"
+            "excludedGraphicsApis": ["D3D12"],
+            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with 0.9 hardware scaling",
             "renderCount": 10,
-            "playgroundId": "#W7E7CF#30",
+            "playgroundId": "#W7E7CF#27",
             "referenceImage": "scissorTestWith0.9HardwareScaling.png",
-            "comments": "Reset playgroundId to #W7E7CF#27 when d3d12 mip-map issue is fixed"
+            "excludedGraphicsApis": ["D3D12"],
+            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with 1.5 hardware scaling",
             "renderCount": 10,
-            "playgroundId": "#W7E7CF#31",
+            "playgroundId": "#W7E7CF#28",
             "referenceImage": "scissorTestWith1.5HardwareScaling.png",
-            "comments": "Reset playgroundId to #W7E7CF#28 when d3d12 mip-map issue is fixed"
+            "excludedGraphicsApis": ["D3D12"],
+            "comment": "TODO: reenable D3D12 when automatica mip-maps issue is fixed in bgfx"
         },
         {
             "title": "Scissor test with negative x and y",
