Updated glslang settings on ShaderCompilerTraversers.cpp

--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -71,6 +71,7 @@ set(ENABLE_HLSL OFF CACHE BOOL "")
 set(ENABLE_OPT OFF CACHE BOOL "")
 set(ENABLE_CTEST OFF CACHE BOOL "")
 set(ENABLE_GLSLANG_WEBMIN ON CACHE BOOL "")
+set(ENABLE_GLSLANG_WEBMIN_DEVEL ON CACHE BOOL "")
 set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
 add_subdirectory(glslang)
 set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
