--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -5,61 +5,63 @@ target_include_directories(base-n INTERFACE "base-n/include")
 
 # -------------------------------- bgfx.cmake --------------------------------
 # Dependencies: none
-set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
-set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
-set(BGFX_INSTALL OFF CACHE BOOL "")
-set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
-set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
-set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
-add_subdirectory(bgfx.cmake)
-target_compile_definitions(bgfx PRIVATE $<$<CONFIG:Debug>:BGFX_CONFIG_DEBUG=1>)
-target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MULTITHREADED=1)
-target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MAX_VERTEX_STREAMS=18)
-target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_BLIT_EMULATION=1)
-target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_DEBUG_ANNOTATION=0)
-if(GRAPHICS_API STREQUAL "D3D11")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D11=1)
-elseif(GRAPHICS_API STREQUAL "D3D12")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D12=1)
-elseif(GRAPHICS_API STREQUAL "Metal")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_METAL=1)
-elseif(GRAPHICS_API STREQUAL "OpenGL")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
-    target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_TEXTURE_READ_BACK_EMULATION=1)
-elseif(GRAPHICS_API STREQUAL "Vulkan")
-    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
-endif()
-set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
-set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
-set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-set_property(TARGET squish PROPERTY UNITY_BUILD false)
-if(TARGET tinyexr)
-    set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
-endif()
-set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
-set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
-set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
-disable_warnings(astc-encoder)
-disable_warnings(edtaa3)
-disable_warnings(etc1)
-disable_warnings(etc2)
-disable_warnings(iqa)
-disable_warnings(nvtt)
-disable_warnings(pvrtc)
-disable_warnings(squish)
-disable_warnings(bgfx)
-disable_warnings(bimg)
-disable_warnings(bx)
+if(NOT TARGET bgfx)
+    set(BGFX_BUILD_TOOLS OFF CACHE BOOL "")
+    set(BGFX_BUILD_EXAMPLES OFF CACHE BOOL "")
+    set(BGFX_INSTALL OFF CACHE BOOL "")
+    set(BGFX_CUSTOM_TARGETS OFF CACHE BOOL "")
+    set(BGFX_USE_DEBUG_SUFFIX OFF CACHE BOOL "")
+    set(BGFX_OPENGL_USE_EGL ON CACHE BOOL "")
+    add_subdirectory(bgfx.cmake)
+    target_compile_definitions(bgfx PRIVATE $<$<CONFIG:Debug>:BGFX_CONFIG_DEBUG=1>)
+    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MULTITHREADED=1)
+    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_MAX_VERTEX_STREAMS=18)
+    target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_BLIT_EMULATION=1)
+    target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_DEBUG_ANNOTATION=0)
+    if(GRAPHICS_API STREQUAL "D3D11")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D11=1)
+    elseif(GRAPHICS_API STREQUAL "D3D12")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_DIRECT3D12=1)
+    elseif(GRAPHICS_API STREQUAL "Metal")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_METAL=1)
+    elseif(GRAPHICS_API STREQUAL "OpenGL")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_OPENGLES=30)
+        target_compile_definitions(bgfx PRIVATE BGFX_GL_CONFIG_TEXTURE_READ_BACK_EMULATION=1)
+    elseif(GRAPHICS_API STREQUAL "Vulkan")
+        target_compile_definitions(bgfx PRIVATE BGFX_CONFIG_RENDERER_VULKAN=1)
+    endif()
+    set_property(TARGET astc-encoder PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET astc-encoder PROPERTY UNITY_BUILD false)
+    set_property(TARGET edtaa3 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET etc1 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET etc2 PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET iqa PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET nvtt PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET nvtt PROPERTY UNITY_BUILD false)
+    set_property(TARGET pvrtc PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET squish PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    set_property(TARGET squish PROPERTY UNITY_BUILD false)
+    if(TARGET tinyexr)
+        set_property(TARGET tinyexr PROPERTY FOLDER Dependencies/bgfx/3rdparty)
+    endif()
+    set_property(TARGET bgfx PROPERTY FOLDER Dependencies/bgfx)
+    set_property(TARGET bimg PROPERTY FOLDER Dependencies/bgfx)
+    set_property(TARGET bx PROPERTY FOLDER Dependencies/bgfx)
+    disable_warnings(astc-encoder)
+    disable_warnings(edtaa3)
+    disable_warnings(etc1)
+    disable_warnings(etc2)
+    disable_warnings(iqa)
+    disable_warnings(nvtt)
+    disable_warnings(pvrtc)
+    disable_warnings(squish)
+    disable_warnings(bgfx)
+    disable_warnings(bimg)
+    disable_warnings(bx)
 
-if(APPLE)
-    set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
+    if(APPLE)
+        set_property(TARGET bgfx PROPERTY UNITY_BUILD false)
+    endif()
 endif()
 
 # -------------------------------- glslang --------------------------------
