--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ if(IOS)
 endif()
 
 project(BabylonNative)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/")
+find_package(BabylonNativeCache)
 
 # --------------------------------------------------
 # Options
