--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -40,9 +40,9 @@ jobs:
 
       - task: Cache@2
         inputs:
-          key: 'bgfx_$(Agent.OS)'
-          restoreKeys: 'bgfx_$(Agent.OS)'
-          path: 'build${{ variables.solutionName }}\Dependencies\bgfx.cmake\RelWithDebInfo'
+          key: 'install_$(Agent.OS)'
+          restoreKeys: 'install_$(Agent.OS)'
+          path: 'build${{ variables.solutionName }}/install'
         displayName: Cache bgfx
 
       - script: |
