--- a/Dependencies/CMakeLists.txt
+++ b/Dependencies/CMakeLists.txt
@@ -66,55 +66,59 @@ endif()
 
 # -------------------------------- glslang --------------------------------
 # Dependencies: none
-set(BUILD_EXTERNAL OFF CACHE BOOL "")
-set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
-set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
-set(ENABLE_HLSL OFF CACHE BOOL "")
-set(ENABLE_OPT OFF CACHE BOOL "")
-set(ENABLE_CTEST OFF CACHE BOOL "")
-set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
-add_subdirectory(glslang)
-set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
-set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
-disable_warnings(GenericCodeGen)
-disable_warnings(glslang)
-disable_warnings(OGLCompiler)
-disable_warnings(OSDependent)
-disable_warnings(MachineIndependent)
-disable_warnings(SPIRV)
-disable_warnings(glslang-default-resource-limits)
+if(NOT TARGET glslang)
+    set(BUILD_EXTERNAL OFF CACHE BOOL "")
+    set(ENABLE_SPVREMAPPER OFF CACHE BOOL "")
+    set(ENABLE_GLSLANG_BINARIES OFF CACHE BOOL "")
+    set(ENABLE_HLSL OFF CACHE BOOL "")
+    set(ENABLE_OPT OFF CACHE BOOL "")
+    set(ENABLE_CTEST OFF CACHE BOOL "")
+    set(SKIP_GLSLANG_INSTALL ON CACHE BOOL "")
+    add_subdirectory(glslang)
+    set_property(TARGET GenericCodeGen PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET glslang PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET OGLCompiler PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET OSDependent PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET MachineIndependent PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET SPIRV PROPERTY FOLDER Dependencies/glslang)
+    set_property(TARGET glslang-default-resource-limits PROPERTY FOLDER Dependencies/glslang)
+    disable_warnings(GenericCodeGen)
+    disable_warnings(glslang)
+    disable_warnings(OGLCompiler)
+    disable_warnings(OSDependent)
+    disable_warnings(MachineIndependent)
+    disable_warnings(SPIRV)
+    disable_warnings(glslang-default-resource-limits)
+endif()
 
 # -------------------------------- SPIRV-Cross --------------------------------
 # Dependencies: none
-set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
-set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
-set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
-if(NOT GRAPHICS_API STREQUAL "Metal")
-    set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
-endif()
-if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
-    set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
-endif()
-add_subdirectory(SPIRV-Cross)
-set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
-set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-disable_warnings(spirv-cross-core)
-disable_warnings(spirv-cross-glsl)
-if(TARGET spirv-cross-msl)
-    set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-endif()
-if(TARGET spirv-cross-hlsl)
-    set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
-    disable_warnings(spirv-cross-hlsl)
+if(NOT TARGET spirv-cross-core)
+    set(SPIRV_CROSS_CLI OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_TESTS OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_CPP OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_REFLECT OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_C_API OFF CACHE BOOL "")
+    set(SPIRV_CROSS_ENABLE_UTIL OFF CACHE BOOL "")
+    set(SPIRV_CROSS_SKIP_INSTALL ON CACHE BOOL "")
+    if(NOT GRAPHICS_API STREQUAL "Metal")
+        set(SPIRV_CROSS_ENABLE_MSL OFF CACHE BOOL "")
+    endif()
+    if(NOT GRAPHICS_API STREQUAL "D3D11" AND NOT GRAPHICS_API STREQUAL "D3D12")
+        set(SPIRV_CROSS_ENABLE_HLSL OFF CACHE BOOL "")
+    endif()
+    add_subdirectory(SPIRV-Cross)
+    set_property(TARGET spirv-cross-core PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    set_property(TARGET spirv-cross-glsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    disable_warnings(spirv-cross-core)
+    disable_warnings(spirv-cross-glsl)
+    if(TARGET spirv-cross-msl)
+        set_property(TARGET spirv-cross-msl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+    endif()
+    if(TARGET spirv-cross-hlsl)
+        set_property(TARGET spirv-cross-hlsl PROPERTY FOLDER Dependencies/SPIRV-Cross)
+        disable_warnings(spirv-cross-hlsl)
+    endif()
 endif()
 
 # -------------------------------- xr --------------------------------
