--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -77,13 +77,13 @@ jobs:
           Playground app:///Scripts/validation_native.js 
         displayName: 'Validation Tests'
 
-#      - script: |
-#          cmake --build build${{ variables.solutionName }} --target INSTALL --config RelWithDebInfo
+      - script: |
+          cmake --build build${{ variables.solutionName }} --target INSTALL --config RelWithDebInfo
 #          cd Install/Test
 #          cmake . -DBINARY_DIR=../../build${{ variables.solutionName }} ${{ variables.jsEngineDefine }}
 #          cmake --build . --config RelWithDebInfo
-#        displayName: 'Install'
-#
+        displayName: 'Install'
+
       - task: PublishBuildArtifacts@1
         inputs:
           artifactName: '${{ variables.solutionName }} - ${{ parameters.graphics_api }} Rendered Pictures'
